@startuml

title __DISCUSSION's Class Diagram__\n

  namespace  {
    namespace opPrinciples.polymorphism {
      namespace discussion {
        class oopPrinciples.polymorphism.discussion.Bus {
            + showMe()
        }
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      namespace discussion {
        class oopPrinciples.polymorphism.discussion.DemoRunTimeDiscussion {
            {static} + main()
        }
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      namespace discussion {
        class oopPrinciples.polymorphism.discussion.RuntimeExample {
        }
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      namespace discussion {
        class oopPrinciples.polymorphism.discussion.Taxi {
            + showMe()
        }
      }
    }
  }
  

  namespace  {
    namespace opPrinciples.polymorphism {
      namespace discussion {
        class oopPrinciples.polymorphism.discussion.Vehicle {
            + showMe()
        }
      }
    }
  }
  

  oopPrinciples.polymorphism.discussion.Bus -up-|> oopPrinciples.polymorphism.discussion.Vehicle
  oopPrinciples.polymorphism.discussion.Taxi -up-|> oopPrinciples.polymorphism.discussion.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
